change tooltip of objective state and align scoring component in sidepanel correctly

--- a/frontend/src/app/shared/scoring/scoring/scoring.component.scss
+++ b/frontend/src/app/shared/scoring/scoring/scoring.component.scss
@@ -41,10 +41,6 @@
   border-right: 1px solid gray;
 }
 
-.border-left {
-  border-left: 1px solid gray;
-}
-
 .score-stretch {
   background-image: url("../../../../assets/images/scoring-stars.svg");
 }
